// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Save to git form rendering form to git save form without git credential in user profile 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main modalContainer"
    style="height: inherit;"
  >
    <p
      class="StyledProps--font StyledProps--main modalHeader StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey800 StyledProps--padding-bottom-small StyledProps--margin-bottom-small StyledProps--margin-top-xlarge"
    >
      common.git.saveResourceLabel
    </p>
    <div
      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main addUserContainer"
    >
      <span
        class="bp3-icon bp3-icon-warning-sign StyledProps--main StyledProps--color StyledProps--color-orange700"
        icon="warning-sign"
      >
        <svg
          data-icon="warning-sign"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            warning-sign
          </desc>
          <path
            d="M15.84 13.5l.01-.01-7-12-.01.01c-.17-.3-.48-.5-.85-.5s-.67.2-.85.5l-.01-.01-7 12 .01.01c-.09.15-.15.31-.15.5 0 .55.45 1 1 1h14c.55 0 1-.45 1-1 0-.19-.06-.35-.15-.5zm-6.85-.51h-2v-2h2v2zm0-3h-2v-5h2v5z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <div>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--color StyledProps--color-black"
        >
          common.git.noUserLabel
        </p>
        <a
          href="/account/dummy/user/profile"
          target="_blank"
        >
          <span
            class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--margin-top-xsmall StyledProps--font-size-small StyledProps--font-weight-bold StyledProps--color StyledProps--color-primary7"
          >
            common.git.addUserCredentialLabel
          </span>
        </a>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main modalBody"
    >
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <form
          class="FormikForm--main"
        >
          <div>
            <div
              class="StyledProps--font StyledProps--main formBody"
            >
              <div
                class="InputWithIdentifier--txtNameContainer TextInput--main"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    ID
                    :
                  </p>
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-editable-text bp3-disabled InputWithIdentifier--idValue"
                      >
                        <span
                          class="bp3-editable-text-content"
                          style="height: 1px; line-height: 1px; min-width: 0;"
                        >
                          testConnector
                        </span>
                      </div>
                    </span>
                  </span>
                </div>
                <div
                  class="bp3-form-group bp3-disabled"
                  data-id="name-0"
                >
                  <label
                    class="bp3-label"
                    for="name"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="saveToGitForm_name"
                    >
                      name
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group bp3-disabled"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        disabled=""
                        name="name"
                        type="text"
                        value="testConnector"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <p
                class="StyledProps--font StyledProps--main StyledProps--margin-bottom-small StyledProps--font-size-medium StyledProps--color StyledProps--color-grey400"
              >
                COMMON.GITSYNC.HARNESSFOLDERLABEL
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main formRow"
              >
                <div
                  class="bp3-form-group bp3-disabled"
                  data-id="repoIdentifier-1"
                >
                  <label
                    class="bp3-label"
                    for="repoIdentifier"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="saveToGitForm_repoIdentifier"
                    >
                      common.git.selectRepoLabel
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group bp3-disabled"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            disabled=""
                            name="repoIdentifier"
                            placeholder="Search..."
                            style="padding-right: 0px;"
                            type="text"
                            value="gitSyncRepoTest"
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                              icon="caret-down"
                            >
                              <svg
                                data-icon="caret-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  caret-down
                                </desc>
                                <path
                                  d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="rootFolder-2"
                >
                  <label
                    class="bp3-label"
                    for="rootFolder"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="saveToGitForm_rootFolder"
                    >
                      common.gitSync.harnessFolderLabel
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="rootFolder"
                            placeholder="Search..."
                            style="padding-right: 0px;"
                            type="text"
                            value="src1/.harness/"
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                              icon="caret-down"
                            >
                              <svg
                                data-icon="caret-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  caret-down
                                </desc>
                                <path
                                  d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="filePath-3"
              >
                <label
                  class="bp3-label"
                  for="filePath"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="saveToGitForm_filePath"
                  >
                    common.git.filePath
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="filePath"
                      type="text"
                      value="testConnector.yaml"
                    />
                  </div>
                </div>
              </div>
              <p
                class="StyledProps--font StyledProps--main StyledProps--margin-bottom-small StyledProps--margin-top-large StyledProps--font-size-medium StyledProps--color StyledProps--color-grey400"
              >
                COMMON.GITSYNC.COMMITDETAILSLABEL
              </p>
              <div
                class="bp3-form-group"
                data-id="commitMsg-4"
              >
                <label
                  class="bp3-label"
                  for="commitMsg"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="saveToGitForm_commitMsg"
                  >
                    common.git.commitMessage
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <textarea
                    autocomplete="off"
                    class="bp3-input bp3-fill"
                    maxlength="1024"
                    name="commitMsg"
                  >
                    common.gitSync.updateResource
                  </textarea>
                </div>
              </div>
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--color StyledProps--color-grey600 StyledProps--padding-bottom-small StyledProps--margin-top-large"
              >
                common.git.branchSelectHeader
              </p>
              <div
                class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
              >
                <div
                  class="StyledProps--font StyledProps--main branchSection StyledProps--padding-top-small"
                >
                  <label
                    class="bp3-control bp3-radio bp3-large StyledProps--font Radio--radio StyledProps--main"
                  >
                    <input
                      checked=""
                      type="radio"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="git-branch-existing"
                    >
                      <svg
                        fill="none"
                        height="16"
                        viewBox="0 0 16 9"
                        width="16"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M12.403 3.67H16v1.626h-3.597a4.477 4.477 0 01-8.807 0H0V3.67h3.596a4.477 4.477 0 018.807 0zm-7.26.813a2.857 2.857 0 105.714 0 2.857 2.857 0 00-5.714 0z"
                          fill="#383946"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <span
                      class="StyledProps--font StyledProps--main StyledProps--margin-left-small StyledProps--inline"
                    >
                      common.git.existingBranchCommitLabel
                    </span>
                    <span
                      class="StyledProps--font StyledProps--main StyledProps--margin-left-small StyledProps--inline StyledProps--padding-top-xsmall StyledProps--padding-bottom-xsmall StyledProps--padding-left-small StyledProps--padding-right-small StyledProps--background-primary2 StyledProps--border StyledProps--color StyledProps--color-black"
                    >
                      
                    </span>
                  </label>
                  <div
                    class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-baseline StyledProps--flex-justifyContent-flex-start StyledProps--padding-top-small"
                  >
                    <div
                      class="bp3-form-group"
                      data-id="createPr-5"
                    >
                      <div
                        class="bp3-form-content"
                      >
                        <label
                          class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--inline"
                        >
                          <input
                            name="createPr"
                            type="checkbox"
                          />
                          <span
                            class="bp3-control-indicator"
                          />
                          <span
                            class="Tooltip--acenter FormikForm--checkBoxDocTooltipLabel"
                            data-tooltip-id="saveToGitForm_createPr"
                          >
                            common.git.startPRLabel
                          </span>
                        </label>
                      </div>
                    </div>
                    <div
                      class="bp3-form-group bp3-disabled branchSelector"
                      data-id="targetBranch-6"
                    >
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-popover-wrapper Select--main bp3-fill"
                        >
                          <div
                            class="bp3-popover-target"
                          >
                            <div
                              class="bp3-input-group bp3-disabled"
                            >
                              <input
                                autocomplete="off"
                                class="bp3-input"
                                disabled=""
                                name="targetBranch"
                                placeholder="Search..."
                                style="padding-right: 0px;"
                                type="text"
                                value=""
                              />
                              <span
                                class="bp3-input-action"
                              >
                                <span
                                  class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                                  icon="caret-down"
                                >
                                  <svg
                                    data-icon="caret-down"
                                    height="14"
                                    viewBox="0 0 16 16"
                                    width="14"
                                  >
                                    <desc>
                                      caret-down
                                    </desc>
                                    <path
                                      d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                      fill-rule="evenodd"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="StyledProps--font StyledProps--main branchSection StyledProps--padding-bottom-small"
                >
                  <label
                    class="bp3-control bp3-radio bp3-large StyledProps--font Radio--radio StyledProps--main"
                  >
                    <input
                      data-test="newBranchRadioBtn"
                      type="radio"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    <span
                      class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey700"
                      data-icon="git-new-branch"
                    >
                      <svg
                        height="16"
                        viewBox="0 0 13 16"
                        width="16"
                      >
                        <path
                          d="M10.406.003a2.399 2.399 0 00-.8 4.658v.94a.8.8 0 01-.8.8H4.001a2.413 2.413 0 00-.8.14V4.66A2.399 2.399 0 002.402 0a2.399 2.399 0 00-.8 4.661v6.678a2.399 2.399 0 00.8 4.661 2.399 2.399 0 00.8-4.661v-2.54a.8.8 0 01.8-.799h4.803a2.4 2.4 0 002.402-2.4v-.939a2.399 2.399 0 00-.8-4.658z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                    <span
                      class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--margin-left-small"
                    >
                      common.git.newBranchCommitLabel
                    </span>
                  </label>
                </div>
              </div>
            </div>
            <div
              class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--padding-top-medium"
            >
              <button
                class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main formButton StyledProps--intent-primary Button--with-current-color"
                disabled=""
                tabindex="-1"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  save
                </span>
              </button>
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main formButton StyledProps--margin-left-medium Button--with-current-color"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  cancel
                </span>
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Save to git form rendering form to save resouces 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main modalContainer"
    style="height: inherit;"
  >
    <div
      class="Layout--horizontal StyledProps--main userInfo StyledProps--flex StyledProps--flex-alignItems-center StyledProps--margin-top-xsmall"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey700"
      >
        common.git.currentUserLabel
      </p>
    </div>
    <p
      class="StyledProps--font StyledProps--main modalHeader StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey800 StyledProps--padding-bottom-small StyledProps--margin-bottom-small StyledProps--margin-top-xlarge"
    >
      common.git.saveResourceLabel
    </p>
    <div
      class="StyledProps--font StyledProps--main modalBody"
    >
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <form
          class="FormikForm--main"
        >
          <div>
            <div
              class="StyledProps--font StyledProps--main formBody"
            >
              <div
                class="InputWithIdentifier--txtNameContainer TextInput--main"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    ID
                    :
                  </p>
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-editable-text bp3-disabled InputWithIdentifier--idValue"
                      >
                        <span
                          class="bp3-editable-text-content"
                          style="height: 1px; line-height: 1px; min-width: 0;"
                        >
                          testConnector
                        </span>
                      </div>
                    </span>
                  </span>
                </div>
                <div
                  class="bp3-form-group bp3-disabled"
                  data-id="name-0"
                >
                  <label
                    class="bp3-label"
                    for="name"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="saveToGitForm_name"
                    >
                      name
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group bp3-disabled"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        disabled=""
                        name="name"
                        type="text"
                        value="testConnector"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <p
                class="StyledProps--font StyledProps--main StyledProps--margin-bottom-small StyledProps--font-size-medium StyledProps--color StyledProps--color-grey400"
              >
                COMMON.GITSYNC.HARNESSFOLDERLABEL
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main formRow"
              >
                <div
                  class="bp3-form-group bp3-disabled"
                  data-id="repoIdentifier-1"
                >
                  <label
                    class="bp3-label"
                    for="repoIdentifier"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="saveToGitForm_repoIdentifier"
                    >
                      common.git.selectRepoLabel
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group bp3-disabled"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            disabled=""
                            name="repoIdentifier"
                            placeholder="Search..."
                            style="padding-right: 0px;"
                            type="text"
                            value="gitSyncRepoTest"
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                              icon="caret-down"
                            >
                              <svg
                                data-icon="caret-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  caret-down
                                </desc>
                                <path
                                  d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="rootFolder-2"
                >
                  <label
                    class="bp3-label"
                    for="rootFolder"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="saveToGitForm_rootFolder"
                    >
                      common.gitSync.harnessFolderLabel
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="rootFolder"
                            placeholder="Search..."
                            style="padding-right: 0px;"
                            type="text"
                            value="src1/.harness/"
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                              icon="caret-down"
                            >
                              <svg
                                data-icon="caret-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  caret-down
                                </desc>
                                <path
                                  d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="filePath-3"
              >
                <label
                  class="bp3-label"
                  for="filePath"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="saveToGitForm_filePath"
                  >
                    common.git.filePath
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="filePath"
                      type="text"
                      value="testConnector.yaml"
                    />
                  </div>
                </div>
              </div>
              <p
                class="StyledProps--font StyledProps--main StyledProps--margin-bottom-small StyledProps--margin-top-large StyledProps--font-size-medium StyledProps--color StyledProps--color-grey400"
              >
                COMMON.GITSYNC.COMMITDETAILSLABEL
              </p>
              <div
                class="bp3-form-group"
                data-id="commitMsg-4"
              >
                <label
                  class="bp3-label"
                  for="commitMsg"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="saveToGitForm_commitMsg"
                  >
                    common.git.commitMessage
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <textarea
                    autocomplete="off"
                    class="bp3-input bp3-fill"
                    maxlength="1024"
                    name="commitMsg"
                  >
                    common.gitSync.updateResource
                  </textarea>
                </div>
              </div>
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--color StyledProps--color-grey600 StyledProps--padding-bottom-small StyledProps--margin-top-large"
              >
                common.git.branchSelectHeader
              </p>
              <div
                class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
              >
                <div
                  class="StyledProps--font StyledProps--main branchSection StyledProps--padding-top-small"
                >
                  <label
                    class="bp3-control bp3-radio bp3-large StyledProps--font Radio--radio StyledProps--main"
                  >
                    <input
                      checked=""
                      type="radio"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="git-branch-existing"
                    >
                      <svg
                        fill="none"
                        height="16"
                        viewBox="0 0 16 9"
                        width="16"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M12.403 3.67H16v1.626h-3.597a4.477 4.477 0 01-8.807 0H0V3.67h3.596a4.477 4.477 0 018.807 0zm-7.26.813a2.857 2.857 0 105.714 0 2.857 2.857 0 00-5.714 0z"
                          fill="#383946"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <span
                      class="StyledProps--font StyledProps--main StyledProps--margin-left-small StyledProps--inline"
                    >
                      common.git.existingBranchCommitLabel
                    </span>
                    <span
                      class="StyledProps--font StyledProps--main StyledProps--margin-left-small StyledProps--inline StyledProps--padding-top-xsmall StyledProps--padding-bottom-xsmall StyledProps--padding-left-small StyledProps--padding-right-small StyledProps--background-primary2 StyledProps--border StyledProps--color StyledProps--color-black"
                    >
                      
                    </span>
                  </label>
                  <div
                    class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-baseline StyledProps--flex-justifyContent-flex-start StyledProps--padding-top-small"
                  >
                    <div
                      class="bp3-form-group"
                      data-id="createPr-5"
                    >
                      <div
                        class="bp3-form-content"
                      >
                        <label
                          class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--inline"
                        >
                          <input
                            name="createPr"
                            type="checkbox"
                          />
                          <span
                            class="bp3-control-indicator"
                          />
                          <span
                            class="Tooltip--acenter FormikForm--checkBoxDocTooltipLabel"
                            data-tooltip-id="saveToGitForm_createPr"
                          >
                            common.git.startPRLabel
                          </span>
                        </label>
                      </div>
                    </div>
                    <div
                      class="bp3-form-group bp3-disabled branchSelector"
                      data-id="targetBranch-6"
                    >
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-popover-wrapper Select--main bp3-fill"
                        >
                          <div
                            class="bp3-popover-target"
                          >
                            <div
                              class="bp3-input-group bp3-disabled"
                            >
                              <input
                                autocomplete="off"
                                class="bp3-input"
                                disabled=""
                                name="targetBranch"
                                placeholder="Search..."
                                style="padding-right: 0px;"
                                type="text"
                                value=""
                              />
                              <span
                                class="bp3-input-action"
                              >
                                <span
                                  class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                                  icon="caret-down"
                                >
                                  <svg
                                    data-icon="caret-down"
                                    height="14"
                                    viewBox="0 0 16 16"
                                    width="14"
                                  >
                                    <desc>
                                      caret-down
                                    </desc>
                                    <path
                                      d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                      fill-rule="evenodd"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="StyledProps--font StyledProps--main branchSection StyledProps--padding-bottom-small"
                >
                  <label
                    class="bp3-control bp3-radio bp3-large StyledProps--font Radio--radio StyledProps--main"
                  >
                    <input
                      data-test="newBranchRadioBtn"
                      type="radio"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    <span
                      class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey700"
                      data-icon="git-new-branch"
                    >
                      <svg
                        height="16"
                        viewBox="0 0 13 16"
                        width="16"
                      >
                        <path
                          d="M10.406.003a2.399 2.399 0 00-.8 4.658v.94a.8.8 0 01-.8.8H4.001a2.413 2.413 0 00-.8.14V4.66A2.399 2.399 0 002.402 0a2.399 2.399 0 00-.8 4.661v6.678a2.399 2.399 0 00.8 4.661 2.399 2.399 0 00.8-4.661v-2.54a.8.8 0 01.8-.799h4.803a2.4 2.4 0 002.402-2.4v-.939a2.399 2.399 0 00-.8-4.658z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                    <span
                      class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--margin-left-small"
                    >
                      common.git.newBranchCommitLabel
                    </span>
                  </label>
                </div>
              </div>
            </div>
            <div
              class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--padding-top-medium"
            >
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main formButton StyledProps--intent-primary Button--with-current-color"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  save
                </span>
              </button>
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main formButton StyledProps--margin-left-medium Button--with-current-color"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  cancel
                </span>
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Save to git form rendering form to save resouces 2`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main modalContainer"
    style="height: inherit;"
  >
    <div
      class="Layout--horizontal StyledProps--main userInfo StyledProps--flex StyledProps--flex-alignItems-center StyledProps--margin-top-xsmall"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey700"
      >
        common.git.currentUserLabel
      </p>
    </div>
    <p
      class="StyledProps--font StyledProps--main modalHeader StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey800 StyledProps--padding-bottom-small StyledProps--margin-bottom-small StyledProps--margin-top-xlarge"
    >
      common.git.saveResourceLabel
    </p>
    <div
      class="StyledProps--font StyledProps--main modalBody"
    >
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <form
          class="FormikForm--main"
        >
          <div>
            <div
              class="StyledProps--font StyledProps--main formBody"
            >
              <div
                class="InputWithIdentifier--txtNameContainer TextInput--main"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    ID
                    :
                  </p>
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-editable-text bp3-disabled InputWithIdentifier--idValue"
                      >
                        <span
                          class="bp3-editable-text-content"
                          style="height: 1px; line-height: 1px; min-width: 0;"
                        >
                          testConnector
                        </span>
                      </div>
                    </span>
                  </span>
                </div>
                <div
                  class="bp3-form-group bp3-disabled"
                  data-id="name-0"
                >
                  <label
                    class="bp3-label"
                    for="name"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="saveToGitForm_name"
                    >
                      name
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group bp3-disabled"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        disabled=""
                        name="name"
                        type="text"
                        value="testConnector"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <p
                class="StyledProps--font StyledProps--main StyledProps--margin-bottom-small StyledProps--font-size-medium StyledProps--color StyledProps--color-grey400"
              >
                COMMON.GITSYNC.HARNESSFOLDERLABEL
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main formRow"
              >
                <div
                  class="bp3-form-group bp3-disabled"
                  data-id="repoIdentifier-1"
                >
                  <label
                    class="bp3-label"
                    for="repoIdentifier"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="saveToGitForm_repoIdentifier"
                    >
                      common.git.selectRepoLabel
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group bp3-disabled"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            disabled=""
                            name="repoIdentifier"
                            placeholder="Search..."
                            style="padding-right: 0px;"
                            type="text"
                            value="gitSyncRepoTest"
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                              icon="caret-down"
                            >
                              <svg
                                data-icon="caret-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  caret-down
                                </desc>
                                <path
                                  d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="rootFolder-2"
                >
                  <label
                    class="bp3-label"
                    for="rootFolder"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="saveToGitForm_rootFolder"
                    >
                      common.gitSync.harnessFolderLabel
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="rootFolder"
                            placeholder="Search..."
                            style="padding-right: 0px;"
                            type="text"
                            value="src1/.harness/"
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                              icon="caret-down"
                            >
                              <svg
                                data-icon="caret-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  caret-down
                                </desc>
                                <path
                                  d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="filePath-3"
              >
                <label
                  class="bp3-label"
                  for="filePath"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="saveToGitForm_filePath"
                  >
                    common.git.filePath
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="filePath"
                      type="text"
                      value="testConnector.yaml"
                    />
                  </div>
                </div>
              </div>
              <p
                class="StyledProps--font StyledProps--main StyledProps--margin-bottom-small StyledProps--margin-top-large StyledProps--font-size-medium StyledProps--color StyledProps--color-grey400"
              >
                COMMON.GITSYNC.COMMITDETAILSLABEL
              </p>
              <div
                class="bp3-form-group"
                data-id="commitMsg-4"
              >
                <label
                  class="bp3-label"
                  for="commitMsg"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="saveToGitForm_commitMsg"
                  >
                    common.git.commitMessage
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <textarea
                    autocomplete="off"
                    class="bp3-input bp3-fill"
                    maxlength="1024"
                    name="commitMsg"
                  >
                    common.gitSync.updateResource
                  </textarea>
                </div>
              </div>
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--color StyledProps--color-grey600 StyledProps--padding-bottom-small StyledProps--margin-top-large"
              >
                common.git.branchSelectHeader
              </p>
              <div
                class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
              >
                <div
                  class="StyledProps--font StyledProps--main branchSection StyledProps--padding-top-small"
                >
                  <label
                    class="bp3-control bp3-radio bp3-large StyledProps--font Radio--radio StyledProps--main"
                  >
                    <input
                      checked=""
                      type="radio"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="git-branch-existing"
                    >
                      <svg
                        fill="none"
                        height="16"
                        viewBox="0 0 16 9"
                        width="16"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M12.403 3.67H16v1.626h-3.597a4.477 4.477 0 01-8.807 0H0V3.67h3.596a4.477 4.477 0 018.807 0zm-7.26.813a2.857 2.857 0 105.714 0 2.857 2.857 0 00-5.714 0z"
                          fill="#383946"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <span
                      class="StyledProps--font StyledProps--main StyledProps--margin-left-small StyledProps--inline"
                    >
                      common.git.existingBranchCommitLabel
                    </span>
                    <span
                      class="StyledProps--font StyledProps--main StyledProps--margin-left-small StyledProps--inline StyledProps--padding-top-xsmall StyledProps--padding-bottom-xsmall StyledProps--padding-left-small StyledProps--padding-right-small StyledProps--background-primary2 StyledProps--border StyledProps--color StyledProps--color-black"
                    >
                      
                    </span>
                  </label>
                  <div
                    class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-baseline StyledProps--flex-justifyContent-flex-start StyledProps--padding-top-small"
                  >
                    <div
                      class="bp3-form-group"
                      data-id="createPr-5"
                    >
                      <div
                        class="bp3-form-content"
                      >
                        <label
                          class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--inline"
                        >
                          <input
                            name="createPr"
                            type="checkbox"
                          />
                          <span
                            class="bp3-control-indicator"
                          />
                          <span
                            class="Tooltip--acenter FormikForm--checkBoxDocTooltipLabel"
                            data-tooltip-id="saveToGitForm_createPr"
                          >
                            common.git.startPRLabel
                          </span>
                        </label>
                      </div>
                    </div>
                    <div
                      class="bp3-form-group bp3-disabled branchSelector"
                      data-id="targetBranch-6"
                    >
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-popover-wrapper Select--main bp3-fill"
                        >
                          <div
                            class="bp3-popover-target"
                          >
                            <div
                              class="bp3-input-group bp3-disabled"
                            >
                              <input
                                autocomplete="off"
                                class="bp3-input"
                                disabled=""
                                name="targetBranch"
                                placeholder="Search..."
                                style="padding-right: 0px;"
                                type="text"
                                value=""
                              />
                              <span
                                class="bp3-input-action"
                              >
                                <span
                                  class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                                  icon="caret-down"
                                >
                                  <svg
                                    data-icon="caret-down"
                                    height="14"
                                    viewBox="0 0 16 16"
                                    width="14"
                                  >
                                    <desc>
                                      caret-down
                                    </desc>
                                    <path
                                      d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                      fill-rule="evenodd"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="StyledProps--font StyledProps--main branchSection StyledProps--padding-bottom-small"
                >
                  <label
                    class="bp3-control bp3-radio bp3-large StyledProps--font Radio--radio StyledProps--main"
                  >
                    <input
                      data-test="newBranchRadioBtn"
                      type="radio"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    <span
                      class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey700"
                      data-icon="git-new-branch"
                    >
                      <svg
                        height="16"
                        viewBox="0 0 13 16"
                        width="16"
                      >
                        <path
                          d="M10.406.003a2.399 2.399 0 00-.8 4.658v.94a.8.8 0 01-.8.8H4.001a2.413 2.413 0 00-.8.14V4.66A2.399 2.399 0 002.402 0a2.399 2.399 0 00-.8 4.661v6.678a2.399 2.399 0 00.8 4.661 2.399 2.399 0 00.8-4.661v-2.54a.8.8 0 01.8-.799h4.803a2.4 2.4 0 002.402-2.4v-.939a2.399 2.399 0 00-.8-4.658z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                    <span
                      class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--margin-left-small"
                    >
                      common.git.newBranchCommitLabel
                    </span>
                  </label>
                </div>
              </div>
            </div>
            <div
              class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--padding-top-medium"
            >
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main formButton StyledProps--intent-primary Button--with-current-color"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  save
                </span>
              </button>
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main formButton StyledProps--margin-left-medium Button--with-current-color"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  cancel
                </span>
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;
